--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYPAL_BASE_URI=https://api-m.sandbox.paypal.com
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
