--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 PAYPAL_BASE_URI=https://api-m.sandbox.paypal.com
 PAYPAL_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
+
+STRIPE_BASE_URI=https://api.stripe.com
+STRIPE_KEY=
+STRIPE_SECRET=
