add subscription paypal

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,9 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 PAYPAL_BASE_URI=https://api-m.sandbox.paypal.com
 PAYPAL_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
+PAYPAL_MONTHLY_PLAN=
+PAYPAL_YEARLY_PLAN=
+
 
 STRIPE_BASE_URI=https://api.stripe.com
 STRIPE_KEY=
