--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,9 @@ PAYPAL_MONTHLY_PLAN=
 PAYPAL_YEARLY_PLAN=
 
 
+
 STRIPE_BASE_URI=https://api.stripe.com
 STRIPE_KEY=
 STRIPE_SECRET=
+STRIPE_MONTHLY_PLAN=
+STRIPE_YEARLY_PLAN=
